--- a/contact.html
+++ b/contact.html
@@ -274,13 +274,13 @@
 
                     <p>
                         <strong>Address:</strong><br>
-                        Andersen Tanzania 5th Floor, Wing “A”, Msasani Tower Msasani Peninsula<br>
+                        Andersen in Tanzania 5th Floor, Wing “A”, <br>Msasani Tower Msasani Peninsula<br>
                         P. O. Box 105924 Dar es Salaam, Tanzania
                     </p>
 
                     <p>
                         <strong>Email:</strong><br>
-                        <a href="mailto:info.tz@andersen.com">info.tz@Andersen.com</a>
+                        <a href="mailto:info@andersen.co.tz">info.tz@Andersen.com</a>
                     </p>
 
                     <p>
