--- a/andersen-tax-services.html
+++ b/andersen-tax-services.html
@@ -30,8 +30,8 @@
 <li>
     <a href="#">Services</a>
     <ul class="menu vertical">
-        <li><a href="tax-services.html">Tax Services</a></li>
-        <li><a href="advisory-services.html">Advisory Services</a></li>
+        <li><a href="andersen-tax-services.html">Andersen Tax Services</a></li>
+        <li><a href="andersen-advisory-services.html">Andersen Advisory Services</a></li>
     </ul>
 </li>
 <li><a href="our-people.html">Professionals</a></li>
@@ -130,8 +130,8 @@
 <li>
     <a href="#">Services</a>
     <ul class="lvl-2 menu row">
-        <li><a href="tax-services.html">Tax Services</a></li>
-        <li><a href="advisory-services.html">Advisory Services</a></li>
+        <li><a href="andersen-tax-services.html">Andersen Tax Services</a></li>
+        <li><a href="andersen-advisory-services.html">Andersen Advisory Services</a></li>
     </ul>
 </li>
 
@@ -390,8 +390,8 @@ Strategy Through Effective Tax Management</p>
                     				<nav class="cell large-3 medium-4 small-12">
                     					<h5>Services</h5>
     <ul>
-        <li><a href="tax-services.html">Tax Services</a></li>
-        <li><a href="advisory-services.html">Advisory Services</a></li>
+        <li><a href="andersen-tax-services.html">Andersen Tax Services</a></li>
+        <li><a href="andersen-advisory-services.html">Andersen Advisory Services</a></li>
     </ul>
                     				</nav>
                     				<nav class="cell large-3 medium-4 small-12">
