--- a/our-people.html
+++ b/our-people.html
@@ -130,8 +130,8 @@
 <li>
     <a href="#">Services</a>
     <ul class="lvl-2 menu row">
-        <li><a href="tax-services.html">Tax Services</a></li>
-        <li><a href="advisory-services.html">Advisory Services</a></li>
+        <li><a href="andersen-tax-services.html">Andersen Tax Services</a></li>
+        <li><a href="andersen-advisory-services.html">Andersen Advisory Services</a></li>
     </ul>
 </li>
 
@@ -443,8 +443,8 @@ Beyond her leadership role at Andersen, Olive is a respected business leader kno
                     				<nav class="cell large-3 medium-4 small-12">
                     					<h5>Services</h5>
     <ul>
-        <li><a href="tax-services.html">Tax Services</a></li>
-        <li><a href="advisory-services.html">Advisory Services</a></li>
+        <li><a href="andersen-tax-services.html">Andersen Tax Services</a></li>
+        <li><a href="andersen-advisory-services.html">Andersen Advisory Services</a></li>
     </ul>
                     				</nav>
                     				<nav class="cell large-3 medium-4 small-12">
