--- a/index.html
+++ b/index.html
@@ -327,10 +327,10 @@
                         					</div>
                         					<div class="text">
                         						<div class="text-body">
-                        							<h3>Tax Services</h3>
+                        							<h3>Andersen Tax Services</h3>
                         							<p>Compliance, planning, and advisory — helping businesses and individuals stay on 
 													   track with tax regulations, optimize their strategies, and make informed decisions for long-term succes</p>
-                        							<a href="tax-services.html" class="button-link">Read More &raquo;</a>
+                        							<a href="andersen-tax-services.html" class="button-link">Read More &raquo;</a>
                         						</div>
                         					</div>
                         				</div>
@@ -344,10 +344,10 @@
                         					</div>
                         					<div class="text">
                         						<div class="text-body">
-                        							<h3>Advisory Services</h3>
+                        							<h3>Andersen Advisory Services</h3>
                         							<p>Business advisor, risk management, transaction support, and corporate governance  practical solutions 
 													   to help organizations grow, adapt, and stay resilient.</p>
-                        							<a href="advisory-services.html" class="button-link">Read More &raquo;</a>
+                        							<a href="andersen-advisory-services.html" class="button-link">Read More &raquo;</a>
                         						</div>
                         					</div>
                         				</div>
