--- a/andersen-tax-services.html
+++ b/andersen-tax-services.html
@@ -197,7 +197,7 @@ Strategy Through Effective Tax Management</p>
             <!-- LEFT: TEXT -->
             <div class="cell large-6 medium-12">
                 <div class="tax-content">
-                    <h2 class="section-heading">Tax Services</h2>
+                    <h2 class="section-heading">Andersen Tax Services</h2>
 
                     <p>
                         We provide comprehensive tax advisory and compliance services to help businesses and individuals navigate Tanzania’s evolving tax landscape.
