--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@
 <li>
     <a href="#">Services</a>
     <ul class="menu vertical">
-        <li><a href="tax-services.html">Tax Services</a></li>
-        <li><a href="advisory-services.html">Advisory Services</a></li>
+        <li><a href="andersen_tax-services.html">Andersen Tax Services</a></li>
+        <li><a href="andersen_advisory-services.html">Andersen Advisory Services</a></li>
     </ul>
 </li>
 <li><a href="our-people.html">Professionals</a></li>
